# rspirv

./: Cargo.toml
autogen/: Cargo.toml
autogen/src/: binary.rs  dr.rs  header.rs  main.rs  sr.rs  structs.rs  utils.rs
rspirv/: Cargo.toml  lib.rs
rspirv/binary/: assemble.rs  autogen_decode_operand.rs  autogen_disas_operand.rs  autogen_error.rs  autogen_parse_operand.rs
rspirv/dr/: autogen_glsl_std_450.rs  autogen_nonsemantic_debugprintf.rs  autogen_nonsemantic_shader_debuginfo_100.rs  autogen_opencl_std_100.rs  mod.rs
rspirv/lift/: autogen_context.rs  mod.rs  storage.rs
rspirv/spirv/: autogen_glsl_std_450.rs  autogen_nonsemantic_debugprintf.rs  autogen_nonsemantic_shader_debuginfo_100.rs  autogen_opencl_std_100.rs  autogen_spirv.rs  mod.rs
rspirv/sr/: autogen_decoration.rs  autogen_instructions.rs  autogen_ops.rs  autogen_types.rs  mod.rs  module.rs  nonsemantic_debugprintf.rs  nonsemantic_shader_debuginfo_100.rs
rspirv/tests/: spirv_blobs.rs
spirv/: Cargo.toml  autogen_spirv.rs
