[package]
authors = ["Lei Zhang <antiagainst@gmail.com>"]
edition = "2018"
name = "tracel-rspirv"
version = "0.12.0+sdk-1.4.309.0"

description = "Rust library APIs for SPIR-V module manipulation"
documentation = "https://docs.rs/rspirv"
keywords = ["spirv", "vulkan", "opengl", "opencl"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/gfx-rs/rspirv"

[lib]
path = "lib.rs"

[dependencies]
rustc-hash = "2.1.0"
tracel-spirv = { version = "0.3.0", path = "../spirv" }

[dev-dependencies]
assert_matches = "1.1"
