[package]
authors = ["Lei Zhang <antiagainst@gmail.com>"]
edition = "2018"
name = "tracel-spirv"
version = "0.3.0+sdk-1.4.309.0"

description = "Rust definition of SPIR-V structs and enums"
documentation = "https://docs.rs/spirv"
keywords = ["spirv", "definition", "struct", "enum"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/gfx-rs/rspirv"

[features]
deserialize = ['serde', 'bitflags/serde']
serialize = ['serde', 'bitflags/serde']

[lib]
path = "lib.rs"

[dependencies]
bitflags = "2.0"
serde = { version = "1", optional = true, default-features = false, features = [
    "derive",
] }
